[B]Advanced Emulator Launcher | version 0.9.2 | xx September 2016[/B]

WIP  ROM Collections can be imported/exported and shared with other people.

FEATURE  Collection ROMs can be repaired/relinked, like Favourite ROMs.

FEATURE  Versioned ROM storage JSON files for Favourites and ROM Collections.
         NOT COMPATBLE WITH PREVIOUS AEL VERSIONS!

FEATURE  Reorganised context menu in Favourites/Collection ROMs.

FEATURE  Relink Favourite ROMs with Unlinked Launchers or Broken parent ROMs.

FEATURE  Tell if scrapers support asset or not in "Edit ROM" -- "Edit Assets/Artwork..."

FEATURE  TheGamesDB asset scraper working OK.

FEATURE  GameFAQs asset scraper working OK.

FEATURE  Ratings can be edited now for Categories/Launchers/ROMs.

FEATURE  Improved URL page data retrieve function.

FEATURE  Initial implementation of Arcade Database metadata scraper.

FEATURE  Initial implementation of MobyGames metadata scraper.

FIX  Add Clearlogo to "Edit Launcher" -- "Manage ROM asset directories..." menu.

FIX  Do not include empty strings when checking for repeated asset directories.


[B]Advanced Emulator Launcher | version 0.9.1 | 6 September 2016[/B]

FEATURE  Invalid characters in launchers.xml are fixed before importing AL legacy launcher/ROMs. A copy of the
         fixed launchers.xml is placed in AEL ADDON_DATA_DIR.

FEATURE  Check if there are duplicated asset directories. This will avoid overwriting of
         artwork files!

FIX  Changed video supported extensions from [mpg, mpeg, avi] to [mov, divx, xvid, wmv, avi, mpg,
     mpeg, mp4, mkv, avc].

FIX  Fixed issue 21: Crash when adding ROMs using _roms_add_new_rom().

FIX  Fixed edition of asset directories in "Edit Launcher" -- "Manage ROM Asset directories..."


[B]Advanced Emulator Launcher | version 0.9.0 | 22 August 2016[/B]

* Initial release.